// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterHeader renders 1`] = `
<DocumentFragment>
  <h1
    class="sc-bZQynM cQeZwO"
  />
</DocumentFragment>
`;

exports[`FooterSectionWrapper renders 1`] = `
<DocumentFragment>
  <div
    class="sc-gzVnrw hJMOTY"
  />
</DocumentFragment>
`;
